# hobby

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  clang-format.ps1  clang-format.sh  clang-tidy.ps1
daily/: .travis.yml  CMakeLists.txt
daily/src/: DailyCodingProblem.cpp  DailyCodingProblem.h
daily/test/: DailyCodingProblemTest.cpp
deitel/: CMakeLists.txt
deitel/src/: TurtleGraphics.cpp  TurtleGraphics.h
deitel/test/: TurtleGraphicsTest.cpp
patterns/: CMakeLists.txt
patterns/src/: Observer.h  ObserverVF.h
patterns/test/: ObserverTest.cpp
problems/daily/: CMakeLists.txt
problems/daily/src/: DailyCodingProblem.cpp  DailyCodingProblem.h
problems/daily/test/: DailyCodingProblemTest.cpp
problems/deitel/: CMakeLists.txt
problems/deitel/src/: WordProcessor.cpp  WordProcessor.h
problems/deitel/test/: WordProcessorTest.cpp
problems/skienna/: CMakeLists.txt
problems/skienna/src/: Intro.cpp
skienna/: CMakeLists.txt
skienna/src/: Intro.h
skienna/test/: IntroTest.cpp
